--- a/src/app/components/companyreviews/companyreviews.component.html
+++ b/src/app/components/companyreviews/companyreviews.component.html
@@ -7,21 +7,24 @@
             <div class='card-body'>
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-md-3">
-                        CompanyId :
+                        Company :
                     </div>
                     <div class="col-md-3">
-                        <input type="number" id="txtskill" class="form-control" Name="txtskill"
-                            [(ngModel)]="companyreviews.CompanyId" placeholder="CompanyId">
+                        <select name="" id="" [(ngModel)]="companyreviews.CompanyId" class="form-control"> 
+                            <option  *ngFor="let item of companyData" value="{{item.Id}}">{{item.CompanyName}}</option>
+                        </select>
+                        <!-- <input type="number" id="txtskill" class="form-control" Name="txtskill"
+                            [(ngModel)]="companyreviews.CompanyId" placeholder="CompanyId"> -->
                     </div>
                     <div class="col-md-3">
-                        ReviewId :
+                        Review :
                     </div>
                     <div class="col-md-3">
-                        <!-- <select name="" id="" name="QualificationName" [(ngModel)]="institution.QualificationtypeId">
-                            <option *ngFor="let item of qualificationdata" value="{{item.QualificationName}}" > {{item.QualificationName}} </option>
-                        </select> -->
-                        <input type="number" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="companyreviews.ReviewId" placeholder="ReviewId" />
+                        <select name="" id="" [(ngModel)]="companyreviews.ReviewId" class="form-control"> 
+                            <option  *ngFor="let item of reviewsData" value="{{item.Id}}">{{item.Heading_}}</option>
+                        </select>
+                        <!-- <input type="number" name="txtcode" class="form-control" id="txtcode"
+                            [(ngModel)]="companyreviews.ReviewId" placeholder="ReviewId" /> -->
                     </div>
                 </div>
 
