--- a/src/app/components/vacancies/vacancies.component.html
+++ b/src/app/components/vacancies/vacancies.component.html
@@ -11,20 +11,20 @@
                        <b>Id :</b> 
                     </div>
                     <div class="col-md-3">
-                      <input type="number" id="txtskill" Name="txtskill"  class="form-control" [(ngModel)]="vacancy.Id" placeholder="Id">
+                      <input type="number" id="txtskill" Name="txtskill"  class="form-control" [(ngModel)]="vacancies.Id" placeholder="Id">
                     </div>
                     <div class="col-md-3">
                        <b>Name :</b> 
                     </div>
                     <div class="col-md-3">
-                      <input type="text" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancy.Name" placeholder="Name"/>
+                      <input type="text" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancies.Name" placeholder="Name"/>
                     </div>
                     <br><br>
                     <div class="col-md-3">
                        <b> Code :</b>
                     </div>
                     <div class="col-md-3">
-                      <input type="text" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancy.Code" placeholder="Code"/>
+                      <input type="text" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancies.Code" placeholder="Code"/>
                     </div>
                     
                     
@@ -32,7 +32,7 @@
                        <b> CompanyId :</b>
                     </div>
                     <div class="col-md-3">
-                      <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancy.CompanyId" placeholder="CompanyId"/>
+                      <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancies.CompanyId" placeholder="CompanyId"/>
                     </div>
                     
                     <br><br>
@@ -40,67 +40,67 @@
                        <b> Count :</b>
                     </div>
                     <div class="col-md-3">
-                      <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancy.Count" placeholder="Count"/>
+                      <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancies.Count" placeholder="Count"/>
                     </div> 
                     <div class="col-md-3">
                        <b> ExperienceFrom  :</b>
                     </div>
                     <div class="col-md-3">
-                      <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancy.ExperienceFrom" placeholder="ExperienceFrom"/>
+                      <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancies.ExperienceFrom" placeholder="ExperienceFrom"/>
                     </div> <br><br>
                     <div class="col-md-3">
                        <b> ExperienceTo :</b>
                     </div>
                     <div class="col-md-3">
-                      <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancy.ExperienceTo" placeholder="ExperienceTo"/>
+                      <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancies.ExperienceTo" placeholder="ExperienceTo"/>
                     </div> 
                     <div class="col-md-3">
                        <b> StatusId :</b>
                     </div>
                     <div class="col-md-3">
-                      <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancy.StatusId" placeholder="StatusId"/>
+                      <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancies.StatusId" placeholder="StatusId"/>
                     </div> <br><br>
                     <div class="col-md-3">
                        <b> AppliedCount :</b>
                     </div>
                     <div class="col-md-3">
-                      <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancy.AppliedCount" placeholder="AppliedCount"/>
+                      <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancies.AppliedCount" placeholder="AppliedCount"/>
                     </div> 
                     <div class="col-md-3">
                        <b> RoledId :</b>
                     </div>
                     <div class="col-md-3">
-                      <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancy.RoledId" placeholder="RoledId"/>
+                      <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancies.RoledId" placeholder="RoledId"/>
                     </div> <br><br>
                     <div class="col-md-3">
                        <b> IndustryTypeId :</b>
                     </div>
                     <div class="col-md-3">
-                      <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacanciesSkill.IndustryTypeId" placeholder="IndustryTypeId"/>
+                      <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancies.IndustryTypeId" placeholder="IndustryTypeId"/>
                     </div> 
                     <div class="col-md-3">
                        <b> DepartmentId :</b>
                     </div>
                     <div class="col-md-3">
-                      <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancy.DepartmentId" placeholder="DepartmentId"/>
+                      <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancies.DepartmentId" placeholder="DepartmentId"/>
                     </div> <br><br>
                     <div class="col-md-3">
                        <b> EmploymentTypeId :</b>
                     </div>
                     <div class="col-md-3">
-                      <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancy.EmploymentTypeId" placeholder="EmploymentTypeId"/>
+                      <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancies.EmploymentTypeId" placeholder="EmploymentTypeId"/>
                     </div> 
                     <div class="col-md-3">
                        <b> RoleCategoryId :</b>
                     </div>
                     <div class="col-md-3">
-                      <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacanciesSkill.RoleCategoryId" placeholder="RoleCategoryId"/>
+                      <input type="number" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancies.RoleCategoryId" placeholder="RoleCategoryId"/>
                     </div> <br><br>
                     <div class="col-md-3">
                        <b> EducationTypeId :</b>
                     </div>
                     <div class="col-md-3">
-                      <input type="text" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancy.EducationTypeId" placeholder="EducationTypeId"/>
+                      <input type="text" name="txtcode" id="txtcode"  class="form-control" [(ngModel)]="vacancies.EducationTypeId" placeholder="EducationTypeId"/>
                     </div> <br><br>
                     <div class="col-md-3">
                       
@@ -109,7 +109,7 @@
                 <div class="row " style="padding-bottom: 10px;">
                   <div class="col-md-9"></div>
                   <div class="col-md-1">
-                    <button (click)="GetVacanciesSkill()" class="btn btn-primary"  >Search</button>
+                    <button class="btn btn-primary"  >Search</button>
                   </div>
               </div>
   
@@ -132,7 +132,7 @@
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-md-12">
                         <div class="container mt-3">
-                             <button class="btn btn-primary" style="float: right;" (click)="GetVacanciesSkillById(-1)"> New </button>
+                             <button class="btn btn-primary" style="float: right;" (click)="GetVacanciesById(-1)"> New </button>
   
                             <table class="table table-bordered">
                                 <thead>
@@ -159,7 +159,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let item of VacanciesSkilldata | paginate
+                                    <tr *ngFor="let item of vacanciesData | paginate
                                     : {
                                         itemsPerPage: tableSize,
                                         currentPage: page,
@@ -183,8 +183,8 @@
                                         <td>{{item.EducationTypeId}}</td>
                                         
   
-                                        <td><button class="btn btn-primary" (click)="GetVacanciesSkillById(item.Id)"> EDIT </button></td>
-                                        <td><button class="btn btn-danger" (click)="VacanciesSkillAddress(item.Id)"> DELETE </button></td>
+                                        <td><button class="btn btn-primary" (click)="GetVacanciesById(item.Id)"> EDIT </button></td>
+                                        <td><button class="btn btn-danger" (click)="DeleteVacancies(item.Id)"> DELETE </button></td>
                                     </tr>
                                 </tbody>
                             </table>
