--- a/src/app/components/familycontacts/familycontacts.component.html
+++ b/src/app/components/familycontacts/familycontacts.component.html
@@ -7,19 +7,20 @@
             <div class='card-body'>
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-md-3">
-                        FamilyId :
+                        Family :
                     </div>
                     <div class="col-md-3">
-                        <input type="number" id="txtskill" class="form-control" Name="txtskill"
-                            [(ngModel)]="familycontacts.FamilyId" placeholder="FamilyId">
+                            <select name="" id="" name="" [(ngModel)]="familycontacts.FamilyId" class="form-control">
+                            <option *ngFor="let item of familyData" value="{{item.Id}}" > {{item.FirstName}} </option>
+                        </select>
+                        <!-- <input type="number" id="txtskill" class="form-control" Name="txtskill"
+                            [(ngModel)]="familycontacts.FamilyId" placeholder="FamilyId"> -->
                     </div>
                     <div class="col-md-3">
                         MobileNumber :
                     </div>
                     <div class="col-md-3">
-                        <!-- <select name="" id="" name="QualificationName" [(ngModel)]="institution.QualificationtypeId">
-                            <option *ngFor="let item of qualificationdata" value="{{item.QualificationName}}" > {{item.QualificationName}} </option>
-                        </select> -->
+                    
                         <input type="number" name="txtcode" class="form-control" id="txtcode"
                             [(ngModel)]="familycontacts.MobileNumber" placeholder="MobileNumber" />
                     </div>
