--- a/src/app/components/familyeducationdetails/familyeducationdetails.component.html
+++ b/src/app/components/familyeducationdetails/familyeducationdetails.component.html
@@ -7,21 +7,24 @@
             <div class='card-body'>
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-md-3">
-                        FamilyId :
+                        Family :
                     </div>
                     <div class="col-md-3">
-                        <input type="number" id="txtskill" class="form-control" Name="txtskill"
-                            [(ngModel)]="familyeducationdetails.FamilyId" placeholder="FamilyId">
+                        <select name="" id="" name="" [(ngModel)]="familyeducationdetails.FamilyId" class="form-control">
+                            <option *ngFor="let item of familyData" value="{{item.Id}}" > {{item.FirstName}} </option>
+                        </select>
+                        <!-- <input type="number" id="txtskill" class="form-control" Name="txtskill"
+                            [(ngModel)]="familyeducationdetails.FamilyId" placeholder="FamilyId"> -->
                     </div>
                     <div class="col-md-3">
-                        QulificationtypeId :
+                        Qulificationtype :
                     </div>
                     <div class="col-md-3">
-                        <!-- <select name="" id="" name="QualificationName" [(ngModel)]="institution.QualificationtypeId">
-                            <option *ngFor="let item of qualificationdata" value="{{item.QualificationName}}" > {{item.QualificationName}} </option>
-                        </select> -->
-                        <input type="number" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="familyeducationdetails.QulificationtypeId" placeholder="QulificationtypeId" />
+                        <select id="" name="QualificationName" [(ngModel)]="familyeducationdetails.QulificationtypeId">
+                            <option *ngFor="let item of qulificationtypeData" value="{{item.Id}}" > {{item.QulificationName}} </option>
+                        </select>
+                        <!-- <input type="number" name="txtcode" class="form-control" id="txtcode"
+                            [(ngModel)]="familyeducationdetails.QulificationtypeId" placeholder="QulificationtypeId" /> -->
                     </div>
 
                     <br><br>
@@ -52,8 +55,11 @@
                         InstitutionId :
                     </div>
                     <div class="col-md-3">
-                        <input type="number" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="familyeducationdetails.InstitutionId" placeholder="InstitutionId" />
+                        <select name="" id="" name="" [(ngModel)]="familyeducationdetails.InstitutionId" class="form-control">
+                            <option *ngFor="let item of institutionsData" value="{{item.Id}}"> {{item.InstitutionName}} </option>
+                        </select>
+                        <!-- <input type="number" name="txtcode" id="txtcode" class="form-control"
+                            [(ngModel)]="familyeducationdetails.InstitutionId" placeholder="InstitutionId" /> -->
                     </div>
                     <br><br>
                     <div class="col-md-3">
